# 12-factor-agents

./: .env.example  .gitignore  .pre-commit-config.yaml  0.1  0.1ms  0.5  1.0  2.0  5.0  AGENT_COMPLEXITY_AUDIT.md  CLEANUP_REPORT.md  HYBRID_SYSTEM_SPECIFICATION.md  HYGIENE_REPORT.md  INTELLIGENT_VALIDATION_RETRY.md  LICENSE  Makefile  PRE_COMMIT_HYGIENE_PLAN.md  PROJECT_STATUS_SUMMARY.md  README.md  README_UV.md  REPOSITORY_ARCHITECTURE.md  ROLLBACK_USER_GUIDE.md  SISTER_REPOS.md  SPARKY_INTEGRATION_SUMMARY.md  SPARKY_README.md  SPARKY_SUCCESS.md  SYSTEM_COMPARISON_ANALYSIS.md  USER_GUIDE.md  api.example  assertions.append  auth.py  breaker.call_allowed  breaker.get_status  breaker.record_failure  breaker.record_success  cache.get  cache.invalidate  cache.set  code_generation_agent.py  code_review_report.json  (+31 more)
12_factor_agents.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agents/: __init__.py  base.py  bug_fix_agent.py  ci_monitoring_agent.py  code_generation_agent.py  code_review_agent.py  component_migration_agent.py  enhanced_workflow_agent.py  event_system_agent.py  failure_analysis_agent.py  feature_builder_agent.py  intelligent_complexity_analyzer.py  intelligent_issue_agent.py  issue_decomposer_agent.py  issue_fixer_agent.py  issue_orchestrator_agent.py  issue_processor_agent.py  issue_router.py  pr_creation_agent.py  pr_review_12factor.py  pr_review_agent.py  pr_review_agent_simple.py  prompt_management_agent.py  repository_setup_agent.py  retry_demo_agent.py  simple_issue_closer.py  simple_issue_fixer.py  smart_issue_agent.py  sparky.py  sparky_4_structured.py  sparky_4_test_edition.py  sparky_5_local.py  sparky_5_prompt_driven.py  sparky_6_async.py  sparky_context_aware.py  sparky_lean.py  sparky_pipeline.py  sparky_pr_agent.py  sparky_quality_review_agent.py  test_generation_enhancer.py  (+2 more)
config/: pr_review_config.json  retry_policies.json  trigger_rules.json
core/: __init__.py  agent.py  agent_executor.py  apple_silicon_executor.py  autonomous.py  background_executor.py  base.py  cache_manager.py  capabilities.py  circuit_breaker.py  cli_primer.py  code_generation_pipeline.py  compliance.py  context.py  context_bundles.py  context_handoffs.py  context_manager.py  context_optimizer.py  database.py  dynamic_primer.py  execution_context.py  external_issue_processor.py  feedback_templates.py  git_workflow.py  github_integration.py  handoff.py  hierarchical_orchestrator.py  intelligent_triggers.py  lazy_loader.py  loop_protection.py  metrics_collector.py  orchestrator.py  pipeline.py  prompt_manager.py  quality_patterns.py  rate_limiter.py  retry.py  retry_wrappers.py  simple_issue_understanding.py  simple_logging.py  (+18 more)
docs/: 12 factor agents.md  AGENT-ISSUE-TEMPLATE.md  AGENT_AUDIT.md  AGENT_CODE_GENERATION_PIPELINE.md  Architecting and Implementing AI-Powered Pull Request Review Agents A Curated Technical Guide.md  BUG_TO_PR_PIPELINE.md  CIRCUIT-BREAKER-DESIGN.md  CITE-ASSIST-UPGRADE-INSTRUCTIONS.md  CI_CD_PHILOSOPHY.md  CLAUDE_AGENT_ARCHITECTURE.md  DYNAMIC-CONTEXT-PRIMING.md  HIERARCHICAL-ORCHESTRATION.md  INDEX.md  INFORMATION-DENSITY-DOCUMENTATION.md  INTEGRATION-GUIDE.md  LEAN_AGENT_PATTERN.md  NEW-REPO-GUIDE.md  (+22 more)
(+381 files in other folders)
